tests/baselines/reference/contextualTypingWithFixedTypeParameters1.errors.txt
==== tests/cases/compiler/contextualTypingWithFixedTypeParameters1.ts (1 errors) ====
    var f10: <T>(x: T, b: () => (a: T) => void, y: T) => T;
    f10('', () => a => a.foo, ''); // a is string, fixed by first parameter
                         ~~~
!!! contextualTypingWithFixedTypeParameters1.ts(2,22): error TS2094: The property 'foo' does not exist on value of type 'string'.
    var r9 = f10('', () => (a => a.foo), 1); // now a should be any